@@ -2196,6 +2196,12 @@ pkl_ast_node pkl_ast_reverse (pkl_ast_node ast);
 char *pkl_ast_format (pkl_ast_node ast);
 void pkl_ast_print (FILE *fp, pkl_ast_node ast);
 
-char *pkl_ast_format_loc (pkl_ast ast, pkl_ast_loc loc);
+/* Format location as a string.
+
+   FILENAME is the name of whatever source the Poke program is read from,
+   usually the name of a file.  If it is NULL, then the source part of
+   the location is formatted assuming <stdin>.  */
+
+char *pkl_ast_format_loc (const char *filename, pkl_ast_loc loc);
 
 #endif /* ! PKL_AST_H */
